tests/ui/foreign_trait.stderr
Error [E0022]: `trait` doesn't work yet
  --> tests/ui/foreign_trait.lex:1:1
    |
  1 | trait Drawable {
    | ^^^^^
 Why: traits and interfaces arrive in M9 — for now, use structs and enums
 Fix: remove `trait` for now, or define a `struct` / `enum` instead

Error [E0003]: expected `{` to open the function body, found `;`
  --> tests/ui/foreign_trait.lex:2:18
    |
  2 |     fn draw(self);
    |                  ^
 Why: the structure here isn't what the compiler expected
 Fix: use `{` to open the function body
