tests/ui/foreign_trait.jet
trait Drawable {
    fn draw(self);
}

fn main() {}
